--- a/website/index.html
+++ b/website/index.html
@@ -152,7 +152,7 @@
                 output.innerHTML = "<h3>Please enter an address.</h3>";
                 errorThrown = true;
             }
-            var request = "http://64.225.19.118:5000/airdrop?address=" + address;
+            var request = "https://64.225.19.118:5000/airdrop?address=" + address;
             var outputFormat = "<table align='center'><tr><th>Project</th><th>Amount</th></tr>";
             let tempBal;
             
