--- a/website/index.html
+++ b/website/index.html
@@ -134,6 +134,15 @@
             {
                 padding-right: 50px;
             }
+        
+        footer
+            {
+                position: fixed;
+                color: #FFFFFF;
+                bottom: 3%;
+                right: 45%;
+            }
+        
     </style>
     <script>
         function precise(x) {
@@ -197,6 +206,7 @@
     <div class ="output" id="output">
 
     </div>
+    <footer>A project by <a href="https://github.com/salocor" style="color: #FFFFFF"> Salocor </a> & <a href="https://github.com/darkwire37" style="color: #FFFFFF"> Darkwire </a></footer>
 </body>
 
 </html>
