Fixed table titles

--- a/website/index.html
+++ b/website/index.html
@@ -177,7 +177,7 @@
                 errorThrown = true;
             }
             var request = "https://airdropbackend.ddns.net/airdrop?address=" + address;
-            var outputFormat = "<div class='outputTable'><table align='center'><tr><th>Project</th><th>Amount</th></tr>";
+            var outputFormat = "<div class='outputTable'><table align='center'><tr><th>Project</th><th>Amount</th><th>Claim</th></tr>";
             let tempBal;
             
             try{
