dang quotation mark

--- a/website/index.html
+++ b/website/index.html
@@ -198,7 +198,7 @@
                       }
                       outputFormat = outputFormat + "</table>";
                       console.log(outputFormat);
-                      output.innerHTML = outputFormat + "</div>;
+                      output.innerHTML = outputFormat + "</div>";
                     }
                     else if (errorThrown === false)
                     {
