--- a/website/index.html
+++ b/website/index.html
@@ -73,7 +73,7 @@
             }
             .title
             {
-                padding-top: 3px;
+                padding-top: 6px;
                 text-align: left;
                 float: left;
                 padding-left: 9px;
@@ -154,7 +154,10 @@
                 position: fixed;
                 color: #FFFFFF;
                 bottom: 3%;
-                right: 45%;
+                left: 50%;
+                width: 500px;
+                margin-left: -250px;
+                text-align: center;
             }
         
     </style>
