--- a/website/index.html
+++ b/website/index.html
@@ -142,6 +142,7 @@
             
             .centered
             {
+                width: 100%;
                 padding-top: 10%;
                 justify-content: center;
                 display: flex;
