--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+    <script>if(!sessionStorage.getItem("_swa")&&document.referrer.indexOf(location.protocol+"//"+location.host)!== 0){fetch("https://counter.dev/track?"+new URLSearchParams({referrer:document.referrer,screen:screen.width+"x"+screen.height,user:"Salocor",utcoffset:"-7"}))};sessionStorage.setItem("_swa","1");</script>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>AirdropFinder</title>
