Added Twitter link

--- a/website/index.html
+++ b/website/index.html
@@ -184,6 +184,12 @@
                 background-color: #1f1f1f;
             }
         
+        .social
+            {
+                position: fixed;
+                bottom: 3%;
+                left: 2%;
+            }
         
         footer
             {
@@ -259,6 +265,9 @@
     <div class ="output" id="output">
 
     </div>
+    <a href="https://twitter.com/AirdropFinder_" target="_new">
+        <img class="social" src="assets/twitter.png" href="https://twitter.com/AirdropFinder_" width="32px" height="32px">
+    </a>
     <footer>A project by <a href="https://github.com/salocor" style="color: #FFFFFF"> Salocor </a> & <a href="https://github.com/darkwire37" style="color: #FFFFFF"> Darkwire </a></footer>
 </body>
 
