--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <img src="assets/logo.png" width="50" height="50" style="padding-top: 8px;" />
+        <img src="assets/logo.png" class="logo">
         <h1 class="title">AirdropFinder</h1>
         <a class="donateCosmos">Like the project? Buy me a coffee: cosmos164nnhgzu9mv49ufkus6wlhvcx4c5aqlm8ajj3j</a>
     </div>
@@ -114,6 +114,11 @@
                 padding-left: 9px;
                 color: #FFFFFF;
                 text-shadow: 5px 5px 10px rgba(black, .5);
+            }
+            .logo {
+                width: 50px;
+                height: 50px;
+                padding-top: 8px;
             }
             .about
             {
