fixed smol twitter

--- a/website/index.html
+++ b/website/index.html
@@ -248,6 +248,11 @@
             {
                 font-size: 50px;
             }
+            .social
+            {
+                width: 70px;
+                height: 70px;
+            }
         }
         
     </style>
