--- a/website/index.html
+++ b/website/index.html
@@ -220,6 +220,14 @@
                 margin-left: -250px;
                 text-align: center;
             }
+        
+        .version
+            {
+                position: fixed;
+                right: 3%;
+                color: #505050;
+                bottom: 3%;
+            }
         /*Mobile styling*/
             
         @media only screen and (max-device-width: 480px) {
@@ -375,6 +383,7 @@
         <img class="social" src="assets/twitter.png" href="https://twitter.com/AirdropFinder_" width="32px" height="32px">
     </a>
     <footer>A project by <a href="https://github.com/salocor" style="color: #FFFFFF"> Salocor </a> & <a href="https://github.com/darkwire37" style="color: #FFFFFF"> Darkwire </a></footer>
+    <h6 class="version">V1.0</h6>
 </body>
 
 </html>
